--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
     "require": {
         "php": ">=7.4.0",
         "yiisoft/yii2": "~2.0.45",
-        "yiisoft/yii2-bootstrap5": "~2.0.2",
-        "yiisoft/yii2-symfonymailer": "~2.0.3"
+        "yiisoft/yii2-symfonymailer": "~2.0.3",
+        "bower-asset/bootstrap": "3.4.* | 3.3.* | 3.2.* | 3.1.*",
+        "yiisoft/yii2-bootstrap": "^2.0",
+        "rmrevin/yii2-fontawesome": "~3.5"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -32,6 +34,7 @@
         "codeception/verify": "^3.0 || ^2.2",
         "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4",
         "symfony/var-dumper": "^5.0",
+        "bower-asset/bootstrap": "3.4.* | 3.3.* | 3.2.* | 3.1.*"
     },
     "config": {
         "allow-plugins": {
