--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "bower-asset/bootstrap": "3.4.* | 3.3.* | 3.2.* | 3.1.*",
         "yiisoft/yii2-bootstrap": "^2.0",
-        "rmrevin/yii2-fontawesome": "~3.5"
+        "rmrevin/yii2-fontawesome": "~3.5",
+        "la-haute-societe/yii2-save-relations-behavior": "^1.7"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
